# Emotion-Recognition

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: pull-request.yaml  python.yaml
configs/: base.yaml
src/daycon_erc/datasets/: dataset.py  utils.py
src/daycon_erc/logger/: logger.py
src/daycon_erc/models/: utils.py
src/daycon_erc/utils/: utils.py
